[project]
name = "own-network-fetcher"
version = "0.1.0"
description = "Isolated browser session capture — network, cookies, storage → JSON"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
]

[project.scripts]
onf = "onf.main:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
