[project]
name = "own-network-fetcher"
version = "0.1.1-phase1"
description = "Isolated browser session capture — network, cookies, storage → JSON"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websocket-client>=1.8.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
onf = "onf.main:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
